--- a/css/main.css
+++ b/css/main.css
@@ -9,13 +9,13 @@ body {
 }
 
 header {
-  width: 100%;
+  width: 1900px;
   border: 1px solid #ffffff;
   text-align:center;
   }
 
   .content {
-    width:100%;
+    width:1900px;
     display:inline-block;
     border: 1px solid #ffffff;
     text-align:center;
@@ -24,7 +24,7 @@ header {
   .left {
     float:left;
     border: 1px solid #ffffff;
-    width:20%;
+    width:200px;
     height:300px;
     padding-top: 500px;
   }
@@ -32,7 +32,7 @@ header {
   .right {
     float:left;
     border: 1px solid #ffffff;
-    width:80%;
+    width:1696px;
     height:300px;
     padding-top: 500px;
   }
